# TinyBar

./: .gitignore  CMakeLists.txt  compile_commands.json
.cache/clangd/index/: BarManager.cpp.DAE8E074D9ABD64D.idx  BarManager.h.7B1B72DF2D2E6377.idx  Clock.cpp.04C7E49E9EE9D714.idx  Clock.h.898C0AF256407DA6.idx  ConfigManager.cpp.80A2CA0690E29360.idx  ConfigManager.h.CE5A3B4E2C5948E9.idx  HyprListener.cpp.4F2FEF575CC5D9FC.idx  HyprListener.h.71789304429D541E.idx  Slider.cpp.6F3B1126721ED62A.idx  Slider.h.D9570CDC29D9980A.idx  main.cpp.74985AEB2DEC9E9A.idx
src/: BarManager.cpp  BarManager.h  Taskbar.cpp  Taskbar.h  main.cpp
src/sockets/: HyprListener.cpp  HyprListener.h  IpcClient.h
src/widgets/: Clock.cpp  Clock.h  Slider.cpp  Slider.h
